# VeloxServe

./: CMakeLists.txt  Dockerfile  README.md  benchmark.txt  build_log.txt  config.json  docker-compose.yml  task.md  veloxserve.conf
include/config/: config_parser.h  location_config.h  server_config.h
include/core/: connection.h  epoll_wrapper.h  server.h  thread_pool.h
include/http/: http_parser.h  http_response.h  mime_types.h  router.h
include/middleware/: cache.h  logger.h  rate_limiter.h
include/modules/: load_balancer.h  proxy_handler.h  static_handler.h
scripts/: benchmark.sh  health_check.sh  stress_test.sh
src/: main.cpp
src/config/: config_parser.cpp  server_config.cpp
src/core/: epoll_wrapper.cpp  server.cpp  thread_pool.cpp
src/http/: http_parser.cpp  http_response.cpp  mime_types.cpp  router.cpp
src/middleware/: cache.cpp  logger.cpp  rate_limiter.cpp
src/modules/: load_balancer.cpp  proxy_handler.cpp  static_handler.cpp
tests/: test_cache.cpp  test_config_parser.cpp  test_http_parser.cpp  test_load_balancer.cpp  test_rate_limiter.cpp  test_router.cpp
www/: index.html
www/errors/: 404.html  500.html
